parser.out
Grammar:

Rule 0     S' -> code_block
Rule 1     code_block -> statement
Rule 2     code_block -> statement code_block
Rule 3     code_block -> code_block statement
Rule 4     statement -> COMMAND
Rule 5     statement -> expr NEWLINE
Rule 6     statement -> expr SEMICOLON
Rule 7     statement -> NEWLINE
Rule 8     statement -> SEMICOLON
Rule 9     statement -> switch_block OTHERWISE NEWLINE code_block END SEMICOLON
Rule 10    statement -> switch_block OTHERWISE SEMICOLON code_block END SEMICOLON
Rule 11    statement -> switch_block OTHERWISE NEWLINE code_block END NEWLINE
Rule 12    statement -> switch_block OTHERWISE SEMICOLON code_block END NEWLINE
Rule 13    statement -> switch_block END NEWLINE
Rule 14    statement -> TRY code_block CATCH statement code_block END NEWLINE
Rule 15    statement -> WHILE statement code_block END NEWLINE
Rule 16    statement -> if_block END SEMICOLON
Rule 17    statement -> if_block END NEWLINE
Rule 18    statement -> BREAK SEMICOLON
Rule 19    statement -> CONTINUE SEMICOLON
Rule 20    statement -> BREAK NEWLINE
Rule 21    statement -> CONTINUE NEWLINE
Rule 22    statement -> FOR statement code_block END SEMICOLON
Rule 23    statement -> FOR statement code_block END NEWLINE
Rule 24    statement -> RETURN expr SEMICOLON
Rule 25    statement -> RETURN expr NEWLINE
Rule 26    statement -> FUNCTION statement code_block END NEWLINE
Rule 27    if_block -> IF statement code_block
Rule 28    if_block -> if_block ELSEIF statement code_block
Rule 29    if_block -> if_block ELSE SEMICOLON code_block
Rule 30    if_block -> if_block ELSE NEWLINE code_block
Rule 31    switch_block -> SWITCH statement CASE statement code_block
Rule 32    switch_block -> switch_block CASE statement code_block
Rule 33    expr -> STRING
Rule 34    expr -> NUMBER
Rule 35    expr -> NAME
Rule 36    expr -> expr CTRANSPOSE  [precedence=left, level=12]
Rule 37    expr -> expr TRANSPOSE  [precedence=left, level=12]
Rule 38    expr -> expr MPOWER expr  [precedence=left, level=12]
Rule 39    expr -> expr POWER expr  [precedence=left, level=12]
Rule 40    expr -> expr LDIVIDE expr  [precedence=left, level=10]
Rule 41    expr -> expr RDIVIDE expr  [precedence=left, level=10]
Rule 42    expr -> expr TIMES expr  [precedence=left, level=10]
Rule 43    expr -> expr MLDIVIDE expr  [precedence=left, level=10]
Rule 44    expr -> expr MRDIVIDE expr  [precedence=left, level=10]
Rule 45    expr -> expr MTIMES expr  [precedence=left, level=10]
Rule 46    expr -> expr MINUS expr  [precedence=left, level=9]
Rule 47    expr -> expr PLUS expr  [precedence=left, level=9]
Rule 48    expr -> expr NE expr  [precedence=left, level=7]
Rule 49    expr -> expr EQ expr  [precedence=left, level=7]
Rule 50    expr -> expr GE expr  [precedence=left, level=7]
Rule 51    expr -> expr GT expr  [precedence=left, level=7]
Rule 52    expr -> expr LE expr  [precedence=left, level=7]
Rule 53    expr -> expr LT expr  [precedence=left, level=7]
Rule 54    expr -> expr AND expr  [precedence=left, level=6]
Rule 55    expr -> expr OR expr  [precedence=left, level=5]
Rule 56    expr -> expr ANDAND expr  [precedence=left, level=4]
Rule 57    expr -> expr OROR expr  [precedence=left, level=3]
Rule 58    expr -> expr COLON expr  [precedence=left, level=8]
Rule 59    expr -> NOT expr  [precedence=left, level=11]
Rule 60    expr -> MINUS expr  [precedence=left, level=9]
Rule 61    expr -> PLUS expr  [precedence=left, level=9]
Rule 62    expr -> AT LPAREN args RPAREN expr
Rule 63    expr -> expr DOT NAME
Rule 64    expr -> expr ELLIPSIS NEWLINE
Rule 65    expr -> LPAREN expr RPAREN
Rule 66    expr -> expr ASSIGN expr  [precedence=left, level=1]
Rule 67    expr -> LSQR matrx_rows matrx_elements RSQR
Rule 68    expr -> LSQR matrx_elements RSQR
Rule 69    expr -> LSQR matrx_rows RSQR
Rule 70    expr -> LCURL matrx_rows matrx_elements RCURL
Rule 71    expr -> LCURL matrx_elements RCURL
Rule 72    expr -> LCURL matrx_rows RCURL
Rule 73    expr -> expr LCURL args RCURL
Rule 74    expr -> expr LPAREN args RPAREN
Rule 75    args -> expr
Rule 76    args -> expr COMMA expr  [precedence=left, level=2]
Rule 77    args -> args COMMA expr  [precedence=left, level=2]
Rule 78    matrx_rows -> matrx_elements SEMICOLON
Rule 79    matrx_rows -> matrx_rows matrx_elements SEMICOLON
Rule 80    matrx_elements -> expr
Rule 81    matrx_elements -> matrx_elements COMMA matrx_elements  [precedence=left, level=2]
Rule 82    matrx_elements -> matrx_elements matrx_elements

Unused terminals:

    ignore_COMMENT

Terminals, with rules where they appear:

AND                  : 54
ANDAND               : 56
ASSIGN               : 66
AT                   : 62
BREAK                : 18 20
CASE                 : 31 32
CATCH                : 14
COLON                : 58
COMMA                : 76 77 81
COMMAND              : 4
CONTINUE             : 19 21
CTRANSPOSE           : 36
DOT                  : 63
ELLIPSIS             : 64
ELSE                 : 29 30
ELSEIF               : 28
END                  : 9 10 11 12 13 14 15 16 17 22 23 26
EQ                   : 49
FOR                  : 22 23
FUNCTION             : 26
GE                   : 50
GT                   : 51
IF                   : 27
LCURL                : 70 71 72 73
LDIVIDE              : 40
LE                   : 52
LPAREN               : 62 65 74
LSQR                 : 67 68 69
LT                   : 53
MINUS                : 46 60
MLDIVIDE             : 43
MPOWER               : 38
MRDIVIDE             : 44
MTIMES               : 45
NAME                 : 35 63
NE                   : 48
NEWLINE              : 5 7 9 11 11 12 13 14 15 17 20 21 23 25 26 30 64
NOT                  : 59
NUMBER               : 34
OR                   : 55
OROR                 : 57
OTHERWISE            : 9 10 11 12
PLUS                 : 47 61
POWER                : 39
RCURL                : 70 71 72 73
RDIVIDE              : 41
RETURN               : 24 25
RPAREN               : 62 65 74
RSQR                 : 67 68 69
SEMICOLON            : 6 8 9 10 10 12 16 18 19 22 24 29 78 79
STRING               : 33
SWITCH               : 31
TIMES                : 42
TRANSPOSE            : 37
TRY                  : 14
WHILE                : 15
error                : 
ignore_COMMENT       : 

Nonterminals, with rules where they appear:

args                 : 62 73 74 77
code_block           : 2 3 9 10 11 12 14 14 15 22 23 26 27 28 29 30 31 32 0
expr                 : 5 6 24 25 36 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 60 61 62 63 64 65 66 66 73 74 75 76 76 77 80
if_block             : 16 17 28 29 30
matrx_elements       : 67 68 70 71 78 79 81 81 82 82
matrx_rows           : 67 69 70 72 79
statement            : 1 2 3 14 15 22 23 26 27 28 31 31 32
switch_block         : 9 10 11 12 13 32


state 0

    (0) S' -> . code_block
    (1) code_block -> . statement
    (2) code_block -> . statement code_block
    (3) code_block -> . code_block statement
    (4) statement -> . COMMAND
    (5) statement -> . expr NEWLINE
    (6) statement -> . expr SEMICOLON
    (7) statement -> . NEWLINE
    (8) statement -> . SEMICOLON
    (9) statement -> . switch_block OTHERWISE NEWLINE code_block END SEMICOLON
    (10) statement -> . switch_block OTHERWISE SEMICOLON code_block END SEMICOLON
    (11) statement -> . switch_block OTHERWISE NEWLINE code_block END NEWLINE
    (12) statement -> . switch_block OTHERWISE SEMICOLON code_block END NEWLINE
    (13) statement -> . switch_block END NEWLINE
    (14) statement -> . TRY code_block CATCH statement code_block END NEWLINE
    (15) statement -> . WHILE statement code_block END NEWLINE
    (16) statement -> . if_block END SEMICOLON
    (17) statement -> . if_block END NEWLINE
    (18) statement -> . BREAK SEMICOLON
    (19) statement -> . CONTINUE SEMICOLON
    (20) statement -> . BREAK NEWLINE
    (21) statement -> . CONTINUE NEWLINE
    (22) statement -> . FOR statement code_block END SEMICOLON
    (23) statement -> . FOR statement code_block END NEWLINE
    (24) statement -> . RETURN expr SEMICOLON
    (25) statement -> . RETURN expr NEWLINE
    (26) statement -> . FUNCTION statement code_block END NEWLINE
    (33) expr -> . STRING
    (34) expr -> . NUMBER
    (35) expr -> . NAME
    (36) expr -> . expr CTRANSPOSE
    (37) expr -> . expr TRANSPOSE
    (38) expr -> . expr MPOWER expr
    (39) expr -> . expr POWER expr
    (40) expr -> . expr LDIVIDE expr
    (41) expr -> . expr RDIVIDE expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr MLDIVIDE expr
    (44) expr -> . expr MRDIVIDE expr
    (45) expr -> . expr MTIMES expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr PLUS expr
    (48) expr -> . expr NE expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr GE expr
    (51) expr -> . expr GT expr
    (52) expr -> . expr LE expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr AND expr
    (55) expr -> . expr OR expr
    (56) expr -> . expr ANDAND expr
    (57) expr -> . expr OROR expr
    (58) expr -> . expr COLON expr
    (59) expr -> . NOT expr
    (60) expr -> . MINUS expr
    (61) expr -> . PLUS expr
    (62) expr -> . AT LPAREN args RPAREN expr
    (63) expr -> . expr DOT NAME
    (64) expr -> . expr ELLIPSIS NEWLINE
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . expr ASSIGN expr
    (67) expr -> . LSQR matrx_rows matrx_elements RSQR
    (68) expr -> . LSQR matrx_elements RSQR
    (69) expr -> . LSQR matrx_rows RSQR
    (70) expr -> . LCURL matrx_rows matrx_elements RCURL
    (71) expr -> . LCURL matrx_elements RCURL
    (72) expr -> . LCURL matrx_rows RCURL
    (73) expr -> . expr LCURL args RCURL
    (74) expr -> . expr LPAREN args RPAREN
    (31) switch_block -> . SWITCH statement CASE statement code_block
    (32) switch_block -> . switch_block CASE statement code_block
    (27) if_block -> . IF statement code_block
    (28) if_block -> . if_block ELSEIF statement code_block
    (29) if_block -> . if_block ELSE SEMICOLON code_block
    (30) if_block -> . if_block ELSE NEWLINE code_block
    COMMAND         shift and go to state 3
    NEWLINE         shift and go to state 5
    SEMICOLON       shift and go to state 6
    TRY             shift and go to state 8
    WHILE           shift and go to state 9
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    FOR             shift and go to state 13
    RETURN          shift and go to state 14
    FUNCTION        shift and go to state 15
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    NAME            shift and go to state 18
    NOT             shift and go to state 21
    MINUS           shift and go to state 19
    PLUS            shift and go to state 20
    AT              shift and go to state 22
    LPAREN          shift and go to state 23
    LSQR            shift and go to state 24
    LCURL           shift and go to state 25
    SWITCH          shift and go to state 26
    IF              shift and go to state 27

    code_block                     shift and go to state 1
    statement                      shift and go to state 2
    expr                           shift and go to state 4
    switch_block                   shift and go to state 7
    if_block                       shift and go to state 10

state 1

    (0) S' -> code_block .
    (3) code_block -> code_block . statement
    (4) statement -> . COMMAND
    (5) statement -> . expr NEWLINE
    (6) statement -> . expr SEMICOLON
    (7) statement -> . NEWLINE
    (8) statement -> . SEMICOLON
    (9) statement -> . switch_block OTHERWISE NEWLINE code_block END SEMICOLON
    (10) statement -> . switch_block OTHERWISE SEMICOLON code_block END SEMICOLON
    (11) statement -> . switch_block OTHERWISE NEWLINE code_block END NEWLINE
    (12) statement -> . switch_block OTHERWISE SEMICOLON code_block END NEWLINE
    (13) statement -> . switch_block END NEWLINE
    (14) statement -> . TRY code_block CATCH statement code_block END NEWLINE
    (15) statement -> . WHILE statement code_block END NEWLINE
    (16) statement -> . if_block END SEMICOLON
    (17) statement -> . if_block END NEWLINE
    (18) statement -> . BREAK SEMICOLON
    (19) statement -> . CONTINUE SEMICOLON
    (20) statement -> . BREAK NEWLINE
    (21) statement -> . CONTINUE NEWLINE
    (22) statement -> . FOR statement code_block END SEMICOLON
    (23) statement -> . FOR statement code_block END NEWLINE
    (24) statement -> . RETURN expr SEMICOLON
    (25) statement -> . RETURN expr NEWLINE
    (26) statement -> . FUNCTION statement code_block END NEWLINE
    (33) expr -> . STRING
    (34) expr -> . NUMBER
    (35) expr -> . NAME
    (36) expr -> . expr CTRANSPOSE
    (37) expr -> . expr TRANSPOSE
    (38) expr -> . expr MPOWER expr
    (39) expr -> . expr POWER expr
    (40) expr -> . expr LDIVIDE expr
    (41) expr -> . expr RDIVIDE expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr MLDIVIDE expr
    (44) expr -> . expr MRDIVIDE expr
    (45) expr -> . expr MTIMES expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr PLUS expr
    (48) expr -> . expr NE expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr GE expr
    (51) expr -> . expr GT expr
    (52) expr -> . expr LE expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr AND expr
    (55) expr -> . expr OR expr
    (56) expr -> . expr ANDAND expr
    (57) expr -> . expr OROR expr
    (58) expr -> . expr COLON expr
    (59) expr -> . NOT expr
    (60) expr -> . MINUS expr
    (61) expr -> . PLUS expr
    (62) expr -> . AT LPAREN args RPAREN expr
    (63) expr -> . expr DOT NAME
    (64) expr -> . expr ELLIPSIS NEWLINE
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . expr ASSIGN expr
    (67) expr -> . LSQR matrx_rows matrx_elements RSQR
    (68) expr -> . LSQR matrx_elements RSQR
    (69) expr -> . LSQR matrx_rows RSQR
    (70) expr -> . LCURL matrx_rows matrx_elements RCURL
    (71) expr -> . LCURL matrx_elements RCURL
    (72) expr -> . LCURL matrx_rows RCURL
    (73) expr -> . expr LCURL args RCURL
    (74) expr -> . expr LPAREN args RPAREN
    (31) switch_block -> . SWITCH statement CASE statement code_block
    (32) switch_block -> . switch_block CASE statement code_block
    (27) if_block -> . IF statement code_block
    (28) if_block -> . if_block ELSEIF statement code_block
    (29) if_block -> . if_block ELSE SEMICOLON code_block
    (30) if_block -> . if_block ELSE NEWLINE code_block
    COMMAND         shift and go to state 3
    NEWLINE         shift and go to state 5
    SEMICOLON       shift and go to state 6
    TRY             shift and go to state 8
    WHILE           shift and go to state 9
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    FOR             shift and go to state 13
    RETURN          shift and go to state 14
    FUNCTION        shift and go to state 15
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    NAME            shift and go to state 18
    NOT             shift and go to state 21
    MINUS           shift and go to state 19
    PLUS            shift and go to state 20
    AT              shift and go to state 22
    LPAREN          shift and go to state 23
    LSQR            shift and go to state 24
    LCURL           shift and go to state 25
    SWITCH          shift and go to state 26
    IF              shift and go to state 27

    statement                      shift and go to state 28
    expr                           shift and go to state 4
    switch_block                   shift and go to state 7
    if_block                       shift and go to state 10

state 2

    (1) code_block -> statement .
    (2) code_block -> statement . code_block
    (1) code_block -> . statement
    (2) code_block -> . statement code_block
    (3) code_block -> . code_block statement
    (4) statement -> . COMMAND
    (5) statement -> . expr NEWLINE
    (6) statement -> . expr SEMICOLON
    (7) statement -> . NEWLINE
    (8) statement -> . SEMICOLON
    (9) statement -> . switch_block OTHERWISE NEWLINE code_block END SEMICOLON
    (10) statement -> . switch_block OTHERWISE SEMICOLON code_block END SEMICOLON
    (11) statement -> . switch_block OTHERWISE NEWLINE code_block END NEWLINE
    (12) statement -> . switch_block OTHERWISE SEMICOLON code_block END NEWLINE
    (13) statement -> . switch_block END NEWLINE
    (14) statement -> . TRY code_block CATCH statement code_block END NEWLINE
    (15) statement -> . WHILE statement code_block END NEWLINE
    (16) statement -> . if_block END SEMICOLON
    (17) statement -> . if_block END NEWLINE
    (18) statement -> . BREAK SEMICOLON
    (19) statement -> . CONTINUE SEMICOLON
    (20) statement -> . BREAK NEWLINE
    (21) statement -> . CONTINUE NEWLINE
    (22) statement -> . FOR statement code_block END SEMICOLON
    (23) statement -> . FOR statement code_block END NEWLINE
    (24) statement -> . RETURN expr SEMICOLON
    (25) statement -> . RETURN expr NEWLINE
    (26) statement -> . FUNCTION statement code_block END NEWLINE
    (33) expr -> . STRING
    (34) expr -> . NUMBER
    (35) expr -> . NAME
    (36) expr -> . expr CTRANSPOSE
    (37) expr -> . expr TRANSPOSE
    (38) expr -> . expr MPOWER expr
    (39) expr -> . expr POWER expr
    (40) expr -> . expr LDIVIDE expr
    (41) expr -> . expr RDIVIDE expr
    (42) expr -> . expr TIMES expr
    (43) expr -> . expr MLDIVIDE expr
    (44) expr -> . expr MRDIVIDE expr
    (45) expr -> . expr MTIMES expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr PLUS expr
    (48) expr -> . expr NE expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr GE expr
    (51) expr -> . expr GT expr
    (52) expr -> . expr LE expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr AND expr
    (55) expr -> . expr OR expr
    (56) expr -> . expr ANDAND expr
    (57) expr -> . expr OROR expr
    (58) expr -> . expr COLON expr
    (59) expr -> . NOT expr
    (60) expr -> . MINUS expr
    (61) expr -> . PLUS expr
    (62) expr -> . AT LPAREN args RPAREN expr
    (63) expr -> . expr DOT NAME
    (64) expr -> . expr ELLIPSIS NEWLINE
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . expr ASSIGN expr
    (67) expr -> . LSQR matrx_rows matrx_elements RSQR
    (68) expr -> . LSQR matrx_elements RSQR
    (69) expr -> . LSQR matrx_rows RSQR
    (70) expr -> . LCURL matrx_rows matrx_elements RCURL
    (71) expr -> . LCURL matrx_elements RCURL
    (72) expr -> . LCURL matrx_rows RCURL
    (73) expr -> . expr LCURL args RCURL
    (74) expr -> . expr LPAREN args RPAREN
    (31) switch_block -> . SWITCH statement CASE statement code_block
    (32) switch_block -> . switch_block CASE statement code_block
    (27) if_block -> . IF statement code_block
    (28) if_block -> . if_block ELSEIF statement code_block
    (29) if_block -> . if_block ELSE SEMICOLON code_block
    (30) if_block -> . if_block ELSE NEWLINE code_block
  ! shift/reduce conflict for COMMAND resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for TRY resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for AT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LSQR resolved as shift
  ! shift/reduce conflict for LCURL resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for IF resolved as shift
    $end            reduce using rule 1 (code_block -> statement .)
    CATCH           reduce using rule 1 (code_block -> statement .)
    END             reduce using rule 1 (code_block -> statement .)
    ELSEIF          reduce using rule 1 (code_block -> statement .)
    ELSE            reduce using rule 1 (code_block -> statement .)
    OTHERWISE       reduce using rule 1 (code_block -> statement .)
    CASE            reduce using rule 1 (code_block -> statement .)
    COMMAND         shift and go to state 3
    NEWLINE         shift and go to state 5
    SEMICOLON       shift and go to state 6
    TRY             shift and go to state 8
    WHILE           shift and go to state 9
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    FOR             shift and go to state 13
    RETURN          shift and go to state 14
    FUNCTION        shift and go to state 15
    STRING          shift and go to state 16
    NUMBER          shift and go to state 17
    NAME            shift and go to state 18
    NOT             shift and go to state 21
    MINUS           shift and go to state 19
    PLUS            shift and go to state 20
    AT              shift and go to state 22
    LPAREN          shift and go to state 23
    LSQR            shift and go to state 24
    LCURL           shift and go to state 25
    SWITCH          shift and go to state 26
    IF              shift and go to state 27

    statement                      shift and go to state 2
    code_block                     shift and go to state 29
    expr                           shift and go to state 4
    switch_block                   shift and go to state 7
    if_block                       shift and go to state 10

state 3

    (4) statement -> COMMAND .
    COMMAND         reduce using rule 4 (statement -> COMMAND .)
    NEWLINE         reduce using rule 4 (statement -> COMMAND .)
    SEMICOLON       reduce using rule 4 (statement -> COMMAND .)
    TRY             reduce using rule 4 (statement -> COMMAND .)
    WHILE           reduce using rule 4 (statement -> COMMAND .)
    BREAK           reduce using rule 4 (statement -> COMMAND .)
    CONTINUE        reduce using rule 4 (statement -> COMMAND .)
    FOR             reduce using rule 4 (statement -> COMMAND .)
    RETURN          reduce using rule 4 (statement -> COMMAND .)
    FUNCTION        reduce using rule 4 (statement -> COMMAND .)
    STRING          reduce using rule 4 (statement -> COMMAND .)
    NUMBER          reduce using rule 4 (statement -> COMMAND .)
    NAME            reduce using rule 4 (statement -> COMMAND .)
    NOT             reduce using rule 4 (statement -> COMMAND .)
    MINUS           reduce using rule 4 (statement -> COMMAND .)
    PLUS            reduce using rule 4 (statement -> COMMAND .)
    AT              reduce using rule 4 (statement -> COMMAND .)
    LPAREN          reduce using rule 4 (statement -> COMMAND .)
    LSQR            reduce using rule 4 (statement -> COMMAND .)
    LCURL           reduce using rule 4 (statement -> COMMAND .)
    SWITCH          reduce using rule 4 (statement -> COMMAND .)
    IF              reduce using rule 4 (statement -> COMMAND .)
    $end            reduce using rule 4 (statement -> COMMAND .)
    CATCH           reduce using rule 4 (statement -> COMMAND .)
    END             reduce using rule 4 (statement -> COMMAND .)
    ELSEIF          reduce using rule 4 (statement -> COMMAND .)
    ELSE            reduce using rule 4 (statement -> COMMAND .)
    OTHERWISE       reduce using rule 4 (statement -> COMMAND .)
    CASE            reduce using rule 4 (statement -> COMMAND .)


state 4

    (5) statement -> expr . NEWLINE
    (6) statement -> expr . SEMICOLON
    (36) expr -> expr . CTRANSPOSE
    (37) expr -> expr . TRANSPOSE
    (38) expr -> expr . MPOWER expr
    (39) expr -> expr . POWER expr
    (40) expr -> expr . LDIVIDE expr
    (41) expr -> expr . RDIVIDE expr
    (42) expr -> expr . TIMES expr
    (43) expr -> expr . MLDIVIDE expr
    (44) expr -> expr . MRDIVIDE expr
    (45) expr -> expr . MTIMES expr
    (46) expr -> expr . MINUS expr
    (47) expr -> expr . PLUS expr
    (48) expr -> expr . NE expr
    (49) expr -> expr . EQ expr
    (50) expr -> expr . GE expr
    (51) expr -> expr . GT expr
    (52) expr -> expr . LE expr
    (53) expr -> expr . LT expr
    (54) expr -> expr . AND expr
    (55) expr -> expr . OR expr
    (56) expr -> expr . ANDAND expr
    (57) expr -> expr . OROR expr
    (58) expr -> expr . COLON expr
    (63) expr -> expr . DOT NAME
    (64) expr -> expr . ELLIPSIS NEWLINE
    (66) expr -> expr . ASSIGN expr
    (73) expr -> expr . LCURL args RCURL
    (74) expr -> expr . LPAREN args RPAREN
    NEWLINE         shift and go to state 30
    SEMICOLON       shift and go to state 31
    CTRANSPOSE      shift and go to state 32
    TRANSPOSE       shift and go to state 33
    MPOWER          shift and go to state 34
    POWER           shift and go to state 35
    LDIVIDE         shift and go to state 36
    RDIVIDE         shift and go to state 37
    TIMES           shift and go to state 38
    MLDIVIDE        shift and go to state 39
    MRDIVIDE        shift and go to state 40
    MTIMES          shift and go to state 41
    MINUS           shift and go to state 42
    PLUS            shift and go to state 43
    NE              shift and go to state 44
    EQ              shift and go to state 45
    GE              shift and go to state 46
    GT              shift and go to state 47
    LE              shift and go to state 48
    LT              shift and go to state 49
    AND             shift and go to state 50
    OR              shift and go to state 51
    ANDAND          shift and go to state 52
    OROR            shift and go to state 53
    COLON           shift and go to state 54
    DOT             shift and go to state 55
    ELLIPSIS        shift and go to state 56
    ASSIGN          shift and go to state 57
    LCURL           shift and go to state 58
    LPAREN          shift and go to state 59


state 5

    (7) statement -> NEWLINE .
    COMMAND         reduce using rule 7 (statement -> NEWLINE .)
    NEWLINE         reduce using rule 7 (statement -> NEWLINE .)
    SEMICOLON       reduce using rule 7 (statement -> NEWLINE .)
    TRY             reduce using rule 7 (statement -> NEWLINE .)
    WHILE           reduce using rule 7 (statement -> NEWLINE .)
    BREAK           reduce using rule 7 (statement -> NEWLINE .)
    CONTINUE        reduce using rule 7 (statement -> NEWLINE .)
    FOR             reduce using rule 7 (statement -> NEWLINE .)
    RETURN          reduce using rule 7 (statement -> NEWLINE .)
    FUNCTION        reduce using rule 7 (statement -> NEWLINE .)
    STRING          reduce using rule 7 (statement -> NEWLINE .)
    NUMBER          reduce using rule 7 (statement -> NEWLINE .)
    NAME            reduce using rule 7 (statement -> NEWLINE .)
    NOT             reduce using rule 7 (statement -> NEWLINE .)
    MINUS           reduce using rule 7 (statement -> NEWLINE .)
    PLUS            reduce using rule 7 (statement -> NEWLINE .)
    AT              reduce using rule 7 (statement -> NEWLINE .)
    LPAREN          reduce using rule 7 (statement -> NEWLINE .)
    LSQR            reduce using rule 7 (statement -> NEWLINE .)
    LCURL           reduce using rule 7 (statement -> NEWLINE .)
    SWITCH          reduce using rule 7 (statement -> NEWLINE .)
    IF              reduce using rule 7 (statement -> NEWLINE .)
    $end            reduce using rule 7 (statement -> NEWLINE .)
    CATCH           reduce using rule 7 (statement -> NEWLINE .)
    END             reduce using rule 7 (statement -> NEWLINE .)
    ELSEIF          reduce using rule 7 (statement -> NEWLINE .)
    ELSE            reduce using rule 7 (statement -> NEWLINE .)
    OTHERWISE       reduce using rule 7 (statement -> NEWLINE .)
    CASE            reduce using rule 7 (statement -> NEWLINE .)


state 6

    (8) statement -> SEMICOLON .
    COMMAND         reduce using rule 8 (statement -> SEMICOLON .)
    NEWLINE         reduce using rule 8 (statement -> SEMICOLON .)
    SEMICOLON       reduce using rule 8 (statement -> SEMICOLON .)
    TRY             reduce using rule 8 (statement -> SEMICOLON .)
    WHILE           reduce using rule 8 (statement -> SEMICOLON .)
    BREAK           reduce using rule 8 (statement -> SEMICOLON .)
    CONTINUE        reduce using rule 8 (statement -> SEMICOLON .)
    FOR             reduce using rule 8 (statement -> SEMICOLON .)
    RETURN          reduce using rule 8 (statement -> SEMICOLON .)
    FUNCTION        reduce using rule 8 (statement -> SEMICOLON .)
    STRING          reduce using rule 8 (statement -> SEMICOLON .)
    NUMBER          reduce using rule 8 (statement -> SEMICOLON .)
    NAME            reduce using rule 8 (statement -> SEMICOLON .)
    NOT             reduce using rule 8 (statement -> SEMICOLON .)
    MINUS           reduce using rule 8 (statement -> SEMICOLON .)
    PLUS            reduce using rule 8 (statement -> SEMICOLON .)
    AT              reduce using rule 8 (statement -> SEMICOLON .)
    LPAREN          reduce using rule 8 (statement -> SEMICOLON .)
    LSQR            reduce using rule 8 (statement -> SEMICOLON .)
    LCURL           reduce using rule 8 (statement -> SEMICOLON .)
    SWITCH          reduce using rule 8 (statement -> SEMICOLON .)
    IF              reduce using rule 8 (statement -> SEMICOLON .)
    $end            reduce using rule 8 (statement -> SEMICOLON .)
    CATCH           reduce using rule 8 (statement -> SEMICOLON .)
    END             reduce using rule 8 (statement -> SEMICOLON .)
    ELSEIF          reduce using rule 8 (statement -> SEMICOLON .)
    ELSE            reduce using rule 8 (statement -> SEMICOLON .)
    OTHERWISE       reduce using rule 8 (statement -> SEMICOLON .)
    CASE            reduce using rule 8 (statement -> SEMICOLON .)


state 7

    (9) statement -> switch_block . OTHERWISE NEWLINE code_block END SEMICOLON
    (10) statement -> switch_block . OTHERWISE SEMICOLON code_block END SEMICOLON
    (11) statement -> switch_block . OTHERWISE NEWLINE code_block END NEWLINE
    (12) statement -> switch_block . OTHERWISE SEMICOLON code_block END NEWLINE
    (13) statement -> switch_block . END NEWLINE
    (32) switch_block -> switch_block . CASE statement code_block
    OTHERWISE       shift and go to state 60
    END             shift and go to state 61
    CASE            shift and go to state 62


state 8
